--- a/.gitignore
+++ b/.gitignore
@@ -45,5 +45,7 @@ $RECYCLE.BIN/
 Network Trash Folder
 Temporary Items
 .apdisk
+
+# Build directories created by running the build script
 Sources/bin
 Sources/CMake-build
