--- a/.gitignore
+++ b/.gitignore
@@ -49,3 +49,5 @@ Temporary Items
 # Build directories created by running the build script
 Sources/bin
 Sources/CMake-build
+# Local files of the Qt project (created by Qt Creator)
+Sources/TextureMapping.pro.user
